--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<h1 class="introduction__content">
 				<span class="introduction__content-el introduction__content-el--name">บูรเศรษฐ วัฒนากร</span>
 				<span class="introduction__content-el introduction__content-el--description">สนใจอิสลาม</span>
-				<span class="introduction__content-el introduction__content-el--job">เชิญทางนี้</span>
+				<span class="introduction__content-el introduction__content-el--job">สอนรับอิสลาม</span>
 			</h1>
 			<svg class="introduction__arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0" y="0" viewBox="0 0 130 65" xml:space="preserve" enable-background="new 0 0 130 65"><g transform="translate(0.000000,65.000000) scale(0.100000,-0.100000)"><path d="M22.2 634c-50-35-40-47 293-349 174-157 323-285 333-285 24 0 635 552 647 585 8 23 6 30-14 46 -13 10-31 19-40 19s-57-37-107-83c-50-45-179-162-287-260l-197-179 -147 134c-319 289-433 388-446 388C50.2 650 34.2 643 22.2 634z"/></g></svg>
 		</div>
@@ -74,9 +74,9 @@
 		<section class="app-design">
 			<div class="app-design__wrapper wrapper--large">
 				<div class="app-design__content blurb">
-					<h2 class="blurb__heading">Topaz App <br>Design</h2>
-					<p class="blurb__copy blurb__copy--tight">App design for Topaz, an awesome creative company from New York.</p>
-					<a class="transform-link" href="#0">Check it out</a>
+					<h2 class="blurb__heading">สาส์นสุดท้าย <br>จากพระผู้เป็นเจ้า</h2>
+					<p class="blurb__copy blurb__copy--tight"> (The Final Message)</p>
+					<a class="transform-link" href="https://www.youtube.com/watch?v=atrGROlhc_I">พิสูจน์อิสลามเชิงประจักษ์</a>
 				</div>
 			</div>
 			<figure class="app-design__visual"></figure>
@@ -84,19 +84,19 @@
 		<!-- END SECTION: App Design -->
 		<!-- SECTION: Web Design -->
 		<section class="web-design">
-			<div class="web-design__wrapper wrapper--small">
+			<!-- <div class="web-design__wrapper wrapper--small">
 				<div class="web-design__content blurb">
 					<h2 class="blurb__heading">MGF Web <br>Design</h2>
 					<p class="blurb__copy blurb__copy--tight">Web design I made for MGF, an amazing architecture agency from London.</p>
 					<a class="transform-link" href="#0">Check it out</a>
 				</div>
 			</div>
-			<figure class="web-design__visual"></figure>
+			<figure class="web-design__visual"></figure> -->
 		</section>
 		<!-- END SECTION: Web Design -->
 		<!-- SECTION: Work -->
 		<section id="work" class="work">
-			<h2 class="work__heading title">Latest Projects</h2>
+			<!-- <h2 class="work__heading title">Latest Projects</h2>
 			<div class="work__wrapper wrapper--large">
 				<ul class="work__list">
 					<li class="work__list-el work__list-el--is-active">
@@ -141,12 +141,12 @@
 					<li class="work__navigation-el"></li>
 					<li class="work__navigation-el"></li>
 				</ul>
-			</div>
+			</div> -->
 		</section>
 		<!-- END SECTION: Work -->
 		<!-- SECTION: Blog -->
 		<section id="blog" class="blog">
-			<h2 class="blog__heading title">Blog Posts</h2>
+			<!-- <h2 class="blog__heading title">Blog Posts</h2>
 			<div class="blog__wrapper wrapper--large">
 				<article class="blog__post">
 					<div class="blog__post-thumbnail">
@@ -181,31 +181,31 @@
 			</div>
 			<div class="blog__view-more">
 				<a class="button blog__view-more--el" href="#0">View More</a>
-			</div>
+			</div> -->
 		</section>
 		<!-- END SECTION: Blog -->
 		<!-- SECTION: Contact -->
 		<section id="contact" class="contact">
-			<h2 class="contact__heading title">Contact Me</h2>
+			<!-- <h2 class="contact__heading title">Contact Me</h2>
 			<div class="contact__wrapper wrapper--large">
 				<div class="contact__visual">
 					<img src="assets/img/contact-visual.png" alt="James Martin's location">
 				</div>
-				<!-- Simple form setup: formspree.io -->
+				
 				<form class="contact__form">
 					<input class="contact__form-el contact__form-el--name" type="text" placeholder="Your Name" spellcheck="false">
 					<input class="contact__form-el contact__form-el--email" type="email" placeholder="Your Email" spellcheck="false">
 					<textarea class="contact__form-el contact__form-el--message" placeholder="Your Message"></textarea>
 					<input class="contact__form-el contact__form-el--submit" type="submit" value="Send">
 				</form>
-			</div>
+			</div> -->
 		</section>
 		<!-- END SECTION: Contact -->
 	</main>
 	<!-- SECTION: Footer -->
 	<footer class="footer">
 		<div class="footer__wrapper wrapper--large">
-			<p class="footer__copyright no-margin">&copy; 2016 James Martin</p>
+			<p class="footer__copyright no-margin">&copy; 2023 Moody</p>
 			<a class="footer__logo logo" href="#0"></a>
 			<a class="footer__arrow" href="#top">
 				<svg class="footer__arrow-el" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0" y="0" viewBox="0 0 130 65" xml:space="preserve" enable-background="new 0 0 130 65"><g transform="translate(0.000000,65.000000) scale(0.100000,-0.100000)"><path d="M315.4 365c-336-305-345-315-290-351 18-12 32-14 45-8 10 5 145 123 300 262l281 253 196-178c108-98 237-215 287-260 50-46 98-83 107-83s27 9 40 19c20 16 22 23 14 46 -12 33-623 585-647 585C638.4 650 489.4 522 315.4 365z"/></g></svg>
